--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -58,18 +58,38 @@
     <div class="level-right">
     {% if user.is_authenticated %}
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
+        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+          <span>New</span>
+        </a>
       </p>
       <p class="level-item">
-        <a class="button is-info" href="{% url 'team:update' team.slug %}" title="Edit team">Edit</a>
+        <a class="button is-info" href="{% url 'team:update' team.slug %}" title="Edit team">
+          <span class="icon is-small">
+            <i class="fas fa-edit"></i>
+          </span>
+          <span>Edit</span>
+        </a>
       </p>
       {% if perms.comicsdb.delete_team %}
       <p class="level-item">
-        <a class="button is-danger" href="{% url 'team:delete' team.slug %}" title="Delete team">Delete</a>
+        <a class="button is-danger" href="{% url 'team:delete' team.slug %}" title="Delete team">
+          <span class="icon is-small">
+            <i class="fas fa-trash"></i>
+          </span>
+          <span>Delete</span>
+        </a>
       </p>
       {% else %}
       <p class="level-item">
-        <a class="button is-danger" title="Delete team" disabled>Delete</a>
+        <a class="button is-danger" title="Delete team" disabled>
+          <span class="icon is-small">
+            <i class="fas fa-trash"></i>
+          </span>
+          <span>Delete</span>
+        </a>
       </p>
       {% endif %}
     {% endif %}
