--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -36,7 +36,12 @@
       <div class="level-right">
         <p class="level-item">
           {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">New</a>
+          <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+          <span>New</span>
+          </a>
           {% endif %}
         </p>
       </div>
