--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -32,7 +32,12 @@
       <div class="level-right">
         <p class="level-item">
         {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
+          <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+          <span>New</span>
+          </a>
         {% endif %}
         </p>
       </div>
