Ok, let's add icons to *all* the buttons

--- a/comicsdb/templates/comicsdb/week_list.html
+++ b/comicsdb/templates/comicsdb/week_list.html
@@ -37,7 +37,12 @@
       <div class="level-right">
         <p class="level-item">
         {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">New</a>
+          <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+            <span class="icon is-small">
+              <i class="fas fa-plus"></i>
+            </span>
+            <span>New</span>
+          </a>
         {% endif %}
         </p>
       </div>
