Add an alias field for the creator

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -181,6 +181,14 @@
           <p><b>Death:</b> {{ creator.death|date:"SHORT_DATE_FORMAT" }}</p>
         {% endif %}
         <p><b>Number of Issue:</b> {{ creator.issue_count }}</p>
+        {% if creator.alias %}
+          {% with aliases=creator.alias %}
+            <p>
+              <b>Alias{{ aliases|pluralize:"es" }}:</b>
+              {% for alias in aliases %}{% if not forloop.first %}, {% endif %}{{ alias }}{% endfor %}
+            </p>
+          {% endwith %}
+        {% endif %}
       </div>
     </div>
     <!-- end misc info -->
