--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -68,7 +68,7 @@
                   <figure class="image is-2by3">
                     {% if issue.image %}
                       {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-                        <img src="{{ im.url }}" alt = "{{ issue }}">
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
                       {% endthumbnail %}
                     {% else %}
                       <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
