--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -50,7 +50,7 @@
           <figure class="image is-2by3">
           {% if publisher.image %}
             {% thumbnail publisher.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" alt = "{{ publisher.name }}">
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ publisher.name }}">
             {% endthumbnail %}
           {% else %}
             <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ publisher.name }}">
