--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -105,7 +105,7 @@
         <figure class="image is-2by3">
           {% if arc.image %}
             {% thumbnail arc.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" alt = "{{ arc.name }}">
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ arc.name }}">
             {% endthumbnail %}
           {% else %}
             <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ arc.name }}">
