--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -105,7 +105,7 @@
         <figure class="image is-2by3">
           {% if team.image %}
             {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" alt = "{{ team.name }}">
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ team.name }}">
             {% endthumbnail %}
           {% else %}
             <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
