--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -7,70 +7,104 @@
 {% block comic_content %}
 
   {% if issue_list %}
-    <nav class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <p class="subtitle is-5">
-            {% if page_obj.paginator %}
-              <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
-            {% else %}
-              <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
-            {% endif %}
-          </p>
-        </div>
-        <div class="level-item">
-          <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
-            <div class="field has-addons">
-              <p class="control">
-                <input class="input" name="q" type="search" placeholder="Find an issue">
-              </p>
-              <p class="control">
-                <button class="button">
-                  Search
-                </button>
-              </p>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="level-right">
-        <p class="level-item">
-        {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
-            <span class="icon is-small">
-              <i class="fas fa-plus"></i>
-            </span>
-            <span>New</span>
-          </a>
-        {% endif %}
-        </p>
-      </div>
-    </nav>
+  <section>
+    <div class="container">
+      <div class="columns">
+        <!-- Main Column -->
+        <div class="column">
+          <div class="box">
+            <nav class="level">
+              <div class="level-left">
+                <div class="level-item">
+                  <p class="subtitle is-5">
+                    {% if page_obj.paginator %}
+                      <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
+                    {% else %}
+                      <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
+                    {% endif %}
+                  </p>
+                </div>
+              </div>
+              <div class="level-right">
+                <p class="level-item">
+                  {% if user.is_authenticated %}
+                    <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+                      <span class="icon is-small">
+                        <i class="fas fa-plus"></i>
+                      </span>
+                      <span>New</span>
+                    </a>
+                  {% endif %}
+                </p>
+              </div>
+            </nav>
 
-    <div class="columns is-multiline">
-      {% for issue in issue_list %}
-      <div class="column is-one-quarter has-text-centered">
-        <a href="{% url 'issue:detail' issue.slug %}">
-          <figure class="image is-2by3">
-          {% if issue.image %}
-            {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ issue }}">
-            {% endthumbnail %}
-          {% else %}
-            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
-          {% endif %}
-          </figure>
-        </a>
-        <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+            <div class="columns is-multiline">
+              {% for issue in issue_list %}
+                <div class="column is-one-quarter has-text-centered">
+                  <a href="{% url 'issue:detail' issue.slug %}">
+                    <figure class="image is-2by3">
+                      {% if issue.image %}
+                        {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ issue }}">
+                        {% endthumbnail %}
+                      {% else %}
+                        <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+                      {% endif %}
+                    </figure>
+                  </a>
+                  <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+                </div>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        <!-- End Main Column-->
+
+        <!-- Search Column -->
+        <div class="column is-one-fifth">
+          <div class="box">
+            <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
+              <div class="field">
+                <label class="label">Series Name</label>
+                <div class="control">
+                  <input class="input" type="text" name="series_name" placeholder="Series Name">
+                </div>
+              </div>
+              <div class="field">
+                <label class="label">Issue Number</label>
+                <div class="control">
+                  <input class="input" type="text" name="number" placeholder="Issue Number">
+                </div>
+              </div>
+              <div class="field">
+                <label class="label">Cover Year</label>
+                <div class="control">
+                  <input class="input" type="text" name="cover_year" placeholder="Cover Year">
+                </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button class="button is-link">Filter</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <!-- End of Search Column -->
       </div>
-      {% endfor %}
     </div>
+  </section>
   {% else %}
+  <section>
+    <div class="container">
     <p>No Issues currently available. Do you want to add one?</p>
     <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">New</a>
+    </div>
+  </section>
   {% endif %}
 {% endblock %}
 
 {% block pagination %}
-  {% include "comicsdb/pagination.html" %}
+  {% include "comicsdb/pagination_issue.html" %}
 {% endblock %}
