--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -103,6 +103,28 @@
                 </div>
               </div>
               <div class="field">
+                <label class="label">Cover Month</label>
+                <div class="control">
+                  <div class="select">
+                    <select name="cover_month">
+                      <option value="">Select Cover Month</option>
+                      <option value="1">January</option>
+                      <option value="2">February</option>
+                      <option value="3">March</option>
+                      <option value="4">April</option>
+                      <option value="5">May</option>
+                      <option value="6">June</option>
+                      <option value="7">July</option>
+                      <option value="8">August</option>
+                      <option value="9">September</option>
+                      <option value="10">October</option>
+                      <option value="11">November</option>
+                      <option value="12">December</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="field">
                 <div class="control">
                   <button class="button is-link">Filter</button>
                 </div>
